[修复] 收敛任务与图查询主链并消除静默假阴性